--- a/tree.html
+++ b/tree.html
@@ -1,192 +1,70 @@
-<table cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: 2px 0px; padding: 0px; overflow: hidden;">
-  <tbody>
-    <tr style="display: none;">
-      <td class="hiddenRow">
-        <div style="padding: 0px; margin: 0px; width: 18px; height: 24px;"></div>
-      </td>
-      <td width="16px" style="display: none;">
-        <div style="width: 18px; height: 18px;"></div>
-      </td>
-      <td class="standartTreeImage" style="width: 18px;">
-        <div style="padding: 0px; margin: 0px; width: 18px; height: 18px;"></div>
-      </td>
-      <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;"></span>
-      </td>
-    </tr>
-    <tr style="">
-      <td></td>
-      <td colspan="3">
-        <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-          <tbody>
-            <tr>
-              <td class="standartTreeImage">
-                <img border="0" align="absmiddle" src="plus.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-              </td>
-              <td width="16px" style="display: none;">
-                <img src="iconUncheckAll.gif" align="absmiddle"
-                style="width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeImage" style="width: 18px;">
-                <img border="0" align="absmiddle" src="folderClosed.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;">Applications</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td colspan="3">
-        <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-          <tbody>
-            <tr>
-              <td class="standartTreeImage">
-                <img border="0" align="absmiddle" src="blank.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-              </td>
-              <td width="16px" style="display: none;">
-                <img src="iconUncheckAll.gif" align="absmiddle"
-                style="width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeImage" style="width: 18px;">
-                <img border="0" align="absmiddle" src="folderClosed.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;">Documents</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td colspan="3">
-        <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-          <tbody>
-            <tr>
-              <td class="standartTreeImage">
-                <img border="0" align="absmiddle" src="blank.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-              </td>
-              <td width="16px" style="display: none;">
-                <img src="iconUncheckAll.gif" align="absmiddle"
-                style="width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeImage" style="width: 18px;">
-                <img border="0" align="absmiddle" src="folderClosed.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;">Images</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td colspan="3">
-        <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-          <tbody>
-            <tr>
-              <td class="standartTreeImage">
-                <img border="0" align="absmiddle" src="minus.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-              </td>
-              <td width="16px" style="display: none;">
-                <img src="iconUncheckAll.gif" align="absmiddle"
-                style="width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeImage" style="width: 18px;">
-                <img border="0" align="absmiddle" src="folderOpen.gif"
-                style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-              </td>
-              <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="selectedTreeRow" style="padding-left: 5px; padding-right: 5px;">web</span>
-              </td>
-            </tr>
-            <tr style="">
-              <td></td>
-              <td colspan="3">
-                <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-                  <tbody>
-                    <tr>
-                      <td class="standartTreeImage">
-                        <img border="0" align="absmiddle" src="blank.gif"
-                        style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-                      </td>
-                      <td width="16px" style="display: none;">
-                        <img src="iconUncheckAll.gif" align="absmiddle"
-                        style="width: 18px; height: 18px;">
-                      </td>
-                      <td class="standartTreeImage" style="width: 18px;">
-                        <img border="0" align="absmiddle" src="folderClosed.gif"
-                        style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-                      </td>
-                      <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;">css</span>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td colspan="3">
-                <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-                  <tbody>
-                    <tr>
-                      <td class="standartTreeImage">
-                        <img border="0" align="absmiddle" src="blank.gif"
-                        style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-                      </td>
-                      <td width="16px" style="display: none;">
-                        <img src="iconUncheckAll.gif" align="absmiddle"
-                        style="width: 18px; height: 18px;">
-                      </td>
-                      <td class="standartTreeImage" style="width: 18px;">
-                        <img border="0" align="absmiddle" src="folderClosed.gif"
-                        style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-                      </td>
-                      <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;">icons</span>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td colspan="3">
-                <table cellspacing="0" cellpadding="0" border="0" style="margin: 0px; padding: 0px;">
-                  <tbody>
-                    <tr>
-                      <td class="standartTreeImage">
-                        <img border="0" align="absmiddle" src="blank.gif"
-                        style="padding: 0px; margin: 0px; width: 18px; height: 24px;">
-                      </td>
-                      <td width="16px" style="display: none;">
-                        <img src="iconUncheckAll.gif" align="absmiddle"
-                        style="width: 18px; height: 18px;">
-                      </td>
-                      <td class="standartTreeImage" style="width: 18px;">
-                        <img border="0" align="absmiddle" src="folderClosed.gif"
-                        style="padding: 0px; margin: 0px; width: 18px; height: 18px;">
-                      </td>
-                      <td class="standartTreeRow" nowrap="" style="font-size: 10pt; cursor: pointer;"><span class="standartTreeRow" style="padding-left: 5px; padding-right: 5px;">xml</span>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="t-tree-container">
+  <ul>
+    <li><span id="tree" class="t-tree-icon t-tree-expanded"></span><span class="t-tree-label">
+    Pets
+  </span>
+      <ul style="overflow: visible;">
+        <li><span id="tree_91338729adf700" class="t-tree-icon t-leaf-node"></span>
+          <span
+          class="t-tree-label">Oscar</span>
+        </li>
+        <li><span id="tree_91338729adf700_0" class="t-tree-icon t-leaf-node"></span>
+          <span
+          class="t-tree-label">Gromit</span>
+        </li>
+        <li><span id="tree_91338729adf700_1" class="t-tree-icon t-leaf-node"></span>
+          <span
+          class="t-tree-label">Max</span>
+        </li>
+        <li><span id="tree_91338729adf700_2" class="t-tree-icon t-leaf-node"></span>
+          <span
+          class="t-tree-label">Roger</span>
+        </li>
+        <li class="t-last"><span id="tree_91338729adf700_3" class="t-tree-icon t-leaf-node"></span>
+          <span
+          class="t-tree-label">Cooper</span>
+        </li>
+      </ul>
+    </li>
+    <li><span id="tree_0" class="t-tree-icon t-tree-expanded"></span><span class="t-tree-label">
+    Games
+  </span>
+      <ul style="overflow: visible;">
+        <li><span id="tree_913387ae60a393" class="t-tree-icon t-tree-expanded"></span>
+          <span
+          class="t-tree-label">Board Games</span>
+            <ul style="overflow: visible;">
+              <li><span id="tree_9133b8903d887c" class="t-tree-icon t-leaf-node"></span>
+                <span
+                class="t-tree-label">Settlers of Catan</span>
+              </li>
+              <li><span id="tree_9133b8903d887c_0" class="t-tree-icon t-leaf-node"></span>
+                <span
+                class="t-tree-label">Agricola</span>
+              </li>
+              <li><span id="tree_9133b8903d887c_1" class="t-tree-icon t-leaf-node"></span>
+                <span
+                class="t-tree-label">Ra</span>
+              </li>
+              <li><span id="tree_9133b8903d887c_2" class="t-tree-icon t-leaf-node"></span>
+                <span
+                class="t-tree-label">Risk</span>
+              </li>
+              <li class="t-last"><span id="tree_9133b8903d887c_3" class="t-tree-icon t-leaf-node"></span>
+                <span
+                class="t-tree-label">Dvonn</span>
+              </li>
+            </ul>
+        </li>
+        <li class="t-last"><span id="tree_913387ae60a393_0" class="t-tree-icon"></span><span class="t-tree-label">
+    Card Games
+  </span>
+        </li>
+      </ul>
+    </li>
+    <li class="t-last"><span id="tree_1" class="t-tree-icon"></span><span class="t-tree-label">
+    Numbers
+  </span>
+    </li>
+  </ul>
+</div>
