initial recursive rendering

--- a/tree.html
+++ b/tree.html
@@ -1,8 +1,7 @@
 <div class="t-tree-container">
   <ul>
-    <li><span id="tree" class="t-tree-icon t-tree-expanded"></span><span class="t-tree-label">
-    Pets
-  </span>
+    <li>
+      <span id="tree" class="t-tree-icon t-tree-expanded"></span><span class="t-tree-label">Pets</span>
       <ul style="overflow: visible;">
         <li><span id="tree_91338729adf700" class="t-tree-icon t-leaf-node"></span>
           <span
@@ -26,9 +25,9 @@
         </li>
       </ul>
     </li>
-    <li><span id="tree_0" class="t-tree-icon t-tree-expanded"></span><span class="t-tree-label">
-    Games
-  </span>
+    <li>
+      <span id="tree_0" class="t-tree-icon t-tree-expanded"></span>
+      <span class="t-tree-label">Games</span>
       <ul style="overflow: visible;">
         <li><span id="tree_913387ae60a393" class="t-tree-icon t-tree-expanded"></span>
           <span
@@ -56,15 +55,15 @@
               </li>
             </ul>
         </li>
-        <li class="t-last"><span id="tree_913387ae60a393_0" class="t-tree-icon"></span><span class="t-tree-label">
-    Card Games
-  </span>
+        <li class="t-last">
+          <span id="tree_913387ae60a393_0" class="t-tree-icon"></span>
+          <span class="t-tree-label">Card Games</span>
         </li>
       </ul>
     </li>
-    <li class="t-last"><span id="tree_1" class="t-tree-icon"></span><span class="t-tree-label">
-    Numbers
-  </span>
+    <li class="t-last">
+      <span id="tree_1" class="t-tree-icon"></span>
+      <span class="t-tree-label">Numbers</span>
     </li>
   </ul>
 </div>
